--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     implementation files('libs/usbserial.jar')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'com.akexorcist:bluetoothspp:1.0.0'
 }
 repositories {
     mavenCentral()
